--- a/index.html
+++ b/index.html
@@ -19,30 +19,34 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="what-is-pathfinder" class="anchor" href="#what-is-pathfinder" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is Pathfinder?</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Pathfinder is a small, light wristband that blends in just like a smartwatch would. But this is no phone accessory: Pathfinder translates sight into touch, allowing blind and visually impaired users to rapidly scan and identify any environment. It’s a bit like Braille for obstacles. Gentle taps encode highly accurate environmental detail, indicating any object up to ten feet away.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="designed-for-lifestyles" class="anchor" href="#designed-for-lifestyles" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designed for lifestyles.</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Pathfinder responds instantly, requires no contact, and stays out of the way: expect a full day’s battery life (then charge wirelessly!), and you’ll keep complete control of both hands. We’re going to bring the best parts of modern technology together, and build a medical product, without the traditional legacy baggage. </p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="canes-and-dogs-have-been-around-for-millennia-the-time-for-pathfinder-is-now" class="anchor" href="#canes-and-dogs-have-been-around-for-millennia-the-time-for-pathfinder-is-now" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Canes and dogs have been around for millennia. The time for Pathfinder is now.</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Too many wearables are fighting to solve the same non-problems: do we really need notifications a second faster? But the technology is definitely there, and it’s being democratized through competition. So Pathfinder was built to bring this cutting edge work to a new population, one that’s been missing out on the rapid evolution of the tech industry. No longer will the visually impaired be constrained to short canes or expensive guide dogs: Pathfinder is the technologically mature evolution of both.</p>
+
+<h3>
+<a id="use-cases" class="anchor" href="#use-cases" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Use Cases</h3>
+
+<p>Pathfinder offers users three revolutionary features: long ranges (up to ten feet), guaranteed non-contact sensing, and full control of both hands. These features are vital to navigation and interaction, but are lost in the cane and guide dog. Pathfinder seeks to minimize any and all constraints experienced by the visually impaired, and it’s a quantum leap forward over existing solutions.
+Pathfinder doesn’t need to be a choice: it’s designed to stay with you the whole day, activating only when you need it. It’s smart enough to sleep when it’s not being used, and come back instantly when you point to the desired object. If you’re not going to use it for a while, you can just shake three times to manually disable the glove, then do the same to reactivate it later.</p>
+
+<h3>
+<a id="but-are-there-issues" class="anchor" href="#but-are-there-issues" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>But are there issues?</h3>
+
+<p>Short Answer: Always, but that’s why we’re here!
+The single biggest issue with the project is the encoding of distance data as haptic feedback. Unfortunately, we seem to be pioneering this field, and so there was a lot of flying blind in the beginning. Fundamentally, we have a finite range of feedback patterns, which therefore limits our reporting resolution (to say nothing of the user’s ability to distinguish patterns!).
+To work around this issue, we thought about the actual biomechanics behind touch, and found we could alternate between the different touch receptors in skin (Merkel and Pacinian mechanoreceptors) by changing the haptic motor’s drive frequency. This way, we were able to expand the user’s sensitive range and deliver more nuanced patterns, improving recognition. Furthermore, we use a special form of logarithmic scale to map distance to feedback, redistributing output resolution to reduce relative error at every distance.
+We believe that just about every engineering problem has a well-researched solution, and so we’re confident in our ability to resolve any issues, both currently known and unknown.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/neilmovva/pathfinder">Pathfinder</a> is maintained by <a href="https://github.com/neilmovva">neilmovva</a>.</span>
